--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             
             <!-- <div id="calendar"></div>
             <iframe class="col-arena-L" src="https://g-calendar-24f-1.glitch.me"></iframe> -->
-            <iframe class="col-arena-L" style="min-height: 300px;" src="schedule/schedule_p1.html"></iframe>
+            <iframe class="col-arena-L" style="min-height: calc(300px + 40px);" src="schedule/schedule_p1.html"></iframe>
 
           </div>
           <!-- --------------------------------------------------------------- -->
@@ -139,7 +139,7 @@
               <br><br><br>
             </h4>
 
-            <iframe class="col-arena-L" style="min-height: 750px;" src="schedule/schedule_p2.html"></iframe>
+            <iframe class="col-arena-L" style="min-height: calc(900px + 40px);" src="schedule/schedule_p2.html"></iframe>
           </div>
           <!-- --------------------------------------------------------------- -->
           <div id="p2_infiniteFigures_2">
@@ -186,7 +186,7 @@
               <br><br><br>
             </h4>
 
-            <iframe class="col-arena-L" style="min-height: 750px;" src="schedule/schedule_p2.html"></iframe>
+            <iframe class="col-arena-L" style="min-height: calc(900px + 40px);" src="schedule/schedule_p2.html"></iframe>
           </div>
           <!-- --------------------------------------------------------------- -->
           <div id="p2_infiniteFigures_2">
