--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   <body>
 
     <!-- Menu ================================================================== -->
+    <div class="menu-bg"></div>
+    
     <div class="menu-top-left">
       <button class="menu-index font-menu" onclick="location.href='index.html'" type="button">
         Software Lab
