--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- Menu ================================================================== -->
     <div class="menu-bg"></div>
-    
+
     <div class="menu-top-left">
       <button class="menu-index font-menu" onclick="location.href='index.html'" type="button">
         Software Lab
@@ -50,6 +50,9 @@
       </button>
       <button id="row3" class="menu-btn font-menu" type="button">
         ➋
+      </button>
+      <button id="row5" class="menu-btn font-menu" type="button">
+        Note
       </button>
       <button class="menu-btn blank font-menu" onclick="javascript:window.open('https://docs.google.com/document/d/1Euk-6pwBMuncuR3-D5TRsx-0_8Lzajf253foPcMY7u8/edit?usp=sharing', '_blank');" type="button">
         Sign-up
@@ -427,12 +430,30 @@
       </div>
     </div>
 
-    <!-- Body: Sign Up ================================================================== -->
-    <!-- <div class="row7">
+    <!-- Body: Note ================================================================== -->
+    <div class="row5">
       <div class="scrollContents">
-        <iframe class="iframe-full" src="https://docs.google.com/document/d/1m5-sjV1BMbj_gvvh0BEALeMDg_dL4180xikqarKQwSw/edit?usp=sharing"></iframe>
+
+        <!-- <div class="h-top"></div>
+        <h1>Infinite Figures</h1> -->
+        
+        <div class="col2-text" style="text-indent: 0px;">
+          <!-- --------------------------------------------------------------- -->
+          <div id="p2_infiniteFigures_1">
+            <iframe class="col-arena-L" style="height: 100svh;" src="https://bu-n-soft.glitch.me"></iframe>
+          </div>
+          <!-- --------------------------------------------------------------- -->
+          <div id="p2_infiniteFigures_2">
+            <iframe class="col-arena-R" src="arena/class_note.html"></iframe>
+          </div>
+          <!-- --------------------------------------------------------------- -->
+        </div>
+
       </div>
-    </div> -->
+      <!-- <div class="scrollContents">
+        <iframe class="iframe-full" src="https://docs.google.com/document/d/1m5-sjV1BMbj_gvvh0BEALeMDg_dL4180xikqarKQwSw/edit?usp=sharing"></iframe>
+      </div> -->
+    </div>
 
 
     <!-- Body: Are.na ================================================================== -->
