--- a/schedule/schedule_p3.html
+++ b/schedule/schedule_p3.html
@@ -11,10 +11,10 @@
 
   <style>
     .fc-view-harness, .fc-view-harness-active {
-      height: 750px !important;
+      height: 900px !important;
     }
     .fc * {
-      max-height: 750px !important;
+      max-height: 900px !important;
     }
   </style>
 </head>
@@ -23,8 +23,8 @@
   <div id="schedule-p3"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js"></script>
-  <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/core@6.1.10/index.global.min.js'></script>
-  <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@6.1.10/index.global.min.js'></script>
+  <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/core@6.1.10/index.global.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@6.1.10/index.global.min.js"></script>
   <script src="schedule_p3.js"></script>
 
 </body>
