--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </a>
 
             <h4>
-              The use of new software plays a significant role in expanding our visual vocabulary and ideas, creating more opportunities in graphic design. "Software Lab" is an experimental laboratory that explores the potential of various digital applications. This course consists of several small workshops designed to help you explore diverse programs, as well as two main projects. The first project encourages bold and experimental attempts using newly learned software, while the second project focuses on creating your own tool to develop your unique design approach.
+              The use of new software plays a significant role in expanding our visual vocabulary and ideas, creating more opportunities in graphic design. "Software Lab" is an experimental laboratory that explores the potential of various digital applications. This course consists of several small workshops designed to help you explore diverse programs, as well as two main projects. The first project encourages bold and experimental attempts using newly acquired software knowledge, while the second project focuses on creating your own tool to develop your unique design approach.
               <br><br><br>
             </h4>
             
@@ -140,7 +140,7 @@
             </a>
 
             <h4>
-              Since the birth of the World Wide Web, creative makers have used it as a tool for exploring ideas, embodying their concepts into unique virtual spaces. Our first project, “World Wild Wonderland,” aims to build a shareable space of your desire. The kind of world you create is up to you. Set yourself free and be bold in experimenting with new software. The following workshops will focus on learning web-based software, but you are welcome to use any tools you prefer, including Photoshop Script or other tools you want to explore.
+              Since the birth of the World Wide Web, creative makers have used it as a tool for exploring ideas, embodying their concepts into unique virtual spaces. Our first project, “World Wild Wonderland,” aims to build a shareable space according to your personal preferences. The kind of world you create is up to you. Set yourself free and be bold in experimenting with new software. The following workshops will focus on learning web-based software, but you are welcome to use any tools you prefer, including Photoshop Script or other tools you want to explore.
               <br><br><br>
             </h4>
 
@@ -333,8 +333,8 @@
                 <h4><ul class="bullet">
                   <li>Explore and learn emerging software to gain new skills and inspiration</li>
                   <li>Develop the ability to use software in bold and experimental ways</li>
-                  <li>Create an individually specified tool to develop their own visual vocabulary</li>
-                  <li>Gain a deeper understanding of the potential of software and its impact on design</li>
+                  <li>Create an individually specified tool to develop your own visual vocabulary</li>
+                  <li>Gain a deeper understanding of the unexplored potential of software and its impact on design</li>
                 </ul></h4><br>
 
                 <h3>Courseware</h3>
@@ -388,13 +388,13 @@
               <div>
                 <h3>#0 Software Lab</h3>
                 <h4>
-                  The use of new software plays a significant role in expanding our visual vocabulary and ideas, creating more opportunities in graphic design. "Software Lab" is an experimental laboratory that explores the potential of various digital applications. This course consists of several small workshops designed to help you explore diverse programs, as well as two main projects. The first project encourages bold and experimental attempts using newly learned software, while the second project focuses on creating your own tool to develop your unique design approach.
+                  The use of new software plays a significant role in expanding our visual vocabulary and ideas, creating more opportunities in graphic design. "Software Lab" is an experimental laboratory that explores the potential of various digital applications. This course consists of several small workshops designed to help you explore diverse programs, as well as two main projects. The first project encourages bold and experimental attempts using newly acquired software knowledge, while the second project focuses on creating your own tool to develop your unique design approach.
                 </h4><br><br>
                 <hr><br><br>
 
                 <h3>#1 World Wild Wonderland</h3>
                 <h4>
-                  Since the birth of the World Wide Web, creative makers have used it as a tool for exploring ideas, embodying their concepts into unique virtual spaces. Our first project, “World Wild Wonderland,” aims to build a shareable space of your desire. The kind of world you create is up to you. Set yourself free and be bold in experimenting with new software. The following workshops will focus on learning web-based software, but you are welcome to use any tools you prefer, including Photoshop Script or other tools you want to explore.
+                  Since the birth of the World Wide Web, creative makers have used it as a tool for exploring ideas, embodying their concepts into unique virtual spaces. Our first project, “World Wild Wonderland,” aims to build a shareable space according to your personal preferences. The kind of world you create is up to you. Set yourself free and be bold in experimenting with new software. The following workshops will focus on learning web-based software, but you are welcome to use any tools you prefer, including Photoshop Script or other tools you want to explore.
                 </h4><br><br>
                 <hr><br><br>
 
