--- a/index.html
+++ b/index.html
@@ -86,15 +86,9 @@
               <br><br><br>
             </h4>
             
-            <!-- <h4>
-              Ⱳ: Workshop
-              <br><br>
-            </h4> -->
-            
-            <!-- <div id="calendar"></div>
-            <iframe class="col-arena-L" src="https://g-calendar-24f-1.glitch.me"></iframe> -->
             <iframe class="col-arena-L" style="min-height: calc(300px + 40px);" src="schedule/schedule_p1.html"></iframe>
-
+            <h4 id="assignment" style="padding-bottom: 15px;"></h4>
+            <!-- <iframe class="col-arena-L" style="height: 100svh;" src="https://g-calendar-24f-p.glitch.me"></iframe> -->
           </div>
           <!-- --------------------------------------------------------------- -->
           <div id="p1_magicSpells_2">
@@ -462,6 +456,7 @@
 
     <!-- script  -->
     <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="assignment.js"></script>
 
     <!-- P2 Infinite Figures - 1: Spline -->
     <!-- <iframe class="toolsWorld" src="https://my.spline.design/kidsplaygroundphysicscopy-55e2e578a2cf923a233b1367ce43a52e/"></iframe> -->
