--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       <button id="row4" class="menu-btn font-menu" onclick="menuSyllabus()" type="button">
         Syllabus
       </button>
-      <button id="row1" class="menu-btn font-menu" onclick="menuProjects()" type="button">
+      <button id="row2" class="menu-btn font-menu" onclick="menuProjects()" type="button">
         🄋
       </button>
-      <button id="row2" class="menu-btn font-menu" type="button">
+      <button id="row1" class="menu-btn font-menu" type="button">
         ➊
       </button>
       <button id="row3" class="menu-btn font-menu" type="button">
@@ -70,7 +70,7 @@
 
 
     <!-- Body: P0 ================================================================== -->
-    <div id="main" class="row1">
+    <div class="row2">
       <div class="scrollContents">
 
         <div class="col2-text" style="text-indent: 0px;">
@@ -87,7 +87,7 @@
             </h4>
             
             <iframe class="col-arena-L" style="min-height: calc(300px + 40px);" src="schedule/schedule_p1.html"></iframe>
-            <h4 id="assignment" style="padding-bottom: 15px;"></h4>
+            <!-- <h4 id="assignment" style="padding-bottom: 15px;"></h4> -->
             <!-- <iframe class="col-arena-L" style="height: 100svh;" src="https://g-calendar-24f-p.glitch.me"></iframe> -->
           </div>
           <!-- --------------------------------------------------------------- -->
@@ -119,7 +119,7 @@
     </div>
 
     <!-- Body: P1 ================================================================== -->
-    <div class="row2">
+    <div id="main" class="row1">
       <div class="scrollContents">
 
         <!-- <div class="h-top"></div>
@@ -139,6 +139,7 @@
             </h4>
 
             <iframe class="col-arena-L" style="min-height: calc(900px + 40px);" src="schedule/schedule_p2.html"></iframe>
+            <h4 id="assignment" style="padding-bottom: 15px;"></h4>
           </div>
           <!-- --------------------------------------------------------------- -->
           <div id="p2_infiniteFigures_2">
