--- a/arena/class_resource.html
+++ b/arena/class_resource.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Class Note</title>
+  <title>Class Resource</title>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -20,19 +20,17 @@
 </head>
 
 <body>
-  <div class="h-top"></div>
-  <!-- <div class="ChannelInfo" style="mix-blend-mode: difference;">
-    <a href="https://www.are.na/platform-9-ctc-1000-103/magic-spells-2" target="_blank">
-      <h3>1.5 Fri // Magic Spells 2</h3>
-    </a>
-    <br>
-  </div> -->
+  <div class="h-top" style="height: 89px;"></div>
+  <a href="https://www.are.na/fall-2025-bu-grad-2-gd/resources-2xettbmydm0" target="_blank">
+    <h1>⠀⠀⠀⠀⠀⠀</h1>
+  </a>
 
   <div class="ChannelContents"></div>
+
   <div class="ScrollMaker" style="position: absolute; top: 0; width: 0; height: calc(100% + 10px);"></div>
 
-  <script>let slug = 'collaborative-toolbox';</script>
-  <script type="text/javascript" src="class_note.js"></script>
+  <script>let slug = 'soft-resources';</script>
+  <script type="text/javascript" src="class_resource.js"></script>
 </body>
   
 </html>
