--- a/schedule_w/weekly.html
+++ b/schedule_w/weekly.html
@@ -28,7 +28,7 @@
   </div> -->
   
   <a href="https://www.are.na/fall-2025-bu-grad-2-gd/soft-schedule" target="_blank">
-    <h1>🄋 Full Schedule & Resources</h1>
+    <h1>⌘ Full Schedule & Resources</h1>
   </a>
 
   <div class="Block Text">
