--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
               <div>
                 <h3>Description</h3>
                 <h4>
-                  Topic is “Software Lab”, course is 2 units. This project-based studio course introduces industry-standard emerging media. Students will explore and establish an introductory technical foundation in tools for animation, modeling, and coding to support creative work. The course includes hands-on demonstrations that provide practical insights, informing conceptually oriented projects.
+                  The use of new software plays an important role in expanding our visual vocabulary and ideas, creating more opportunities in graphic design. "Software Lab" is an experimental laboratory that explores the potential of various digital applications. This course consists of several small workshops designed to help you explore diverse programs, as well as three main projects. You are encouraged to play, take risks, and experiment boldly with newly learned tools as you discover and develop your own design approach.
                 </h4><br><br>
 
                 <h3>Learning Outcomes</h3>
