--- a/index.html
+++ b/index.html
@@ -224,38 +224,6 @@
                     </ul>
                   </h3>
                   <br>
-                  <h3 style="display: grid; grid-template-columns: 125px auto;">
-                    <ul>
-                      <li>
-                        Location
-                      </li>
-                    </ul>
-                    <ul>
-                      <li>
-                        Room 410<br>
-                        (808 Commonwealth Ave)
-                      </li>
-                    </ul>
-                  </h3>
-                </div>
-              </h3>
-
-              <h3 style="text-indent: 0px;">
-                <div>
-                  <h3 style="display: grid; grid-template-columns: 140px auto;">
-                    <ul>
-                      <li>
-                        Time
-                      </li>
-                      <br>
-                    </ul>
-                    <ul>
-                      <li>
-                        Wed 6:30 — 9:15 PM
-                      </li>
-                      <br><br>
-                    </ul>
-                  </h3>
                   <h3 style="display: grid; grid-template-columns: 140px auto;">
                     <ul>
                       <li>
@@ -267,6 +235,42 @@
                         Fri 10:00 — 1:30 pm<br>
                         by appointment
                       </li>
+                    </ul>
+                  </h3>
+                </div>
+              </h3>
+
+              <h3 style="text-indent: 0px;">
+                <div>
+                  <h3 style="display: grid; grid-template-columns: 110px auto;">
+                    <ul>
+                      <li>
+                        Time
+                      </li>
+                      <li>
+                        Location
+                      </li>
+                    </ul>
+                    <ul>
+                      <li>
+                        Wed 6:30 — 9:15 PM
+                      </li>
+                      <li>
+                        Room 410, 808 Building
+                      </li>
+                      <br>
+                    </ul>
+                  </h3>
+
+                  <h3 style="display: grid; grid-template-columns: 45px auto;">
+                    <ul>
+                      <li>
+                        TA
+                      </li>
+                    </ul>
+                    <ul class="bulletS">
+                      <li class="link"><a href = "https://nienko.com/" target="_blank">Sophia Kornienko (She/ Her)</a></li>
+                      <li class="link"><a href = "mailto: nienko@bu.edu">nienko@bu.edu</a></li>
                     </ul>
                   </h3>
                 </div>
@@ -288,13 +292,13 @@
                 <h4><ul class="bullet">
                   <li>Explore and learn emerging software to gain new skills and inspiration</li>
                   <li>Develop the ability to use software in bold and experimental ways</li>
-                  <li>Create an individually specified tool to develop your own visual vocabulary</li>
-                  <li>Gain a deeper understanding of the unexplored potential of software and its impact on design</li>
+                  <li>Gain a deeper understanding of the potential of new software and its impact on design</li>
+                  <li>Learn how to collaboratively build a rich tool archive as a shared resource</li>
                 </ul></h4><br>
 
                 <h3>Courseware</h3>
                 <h4>
-                  Please check our class website regularly, as it will be used for sign-ups and uploading course materials. We will be using Are.na as the main tool for sharing insightful resources. If you don’t have an Are.na account yet, please sign up in advance.
+                  Please check our class website and Slack channel regularly. The class website will be used for sign-ups and uploading course materials, while Slack will be used for group communication. We will use Are.na for sharing insightful resources.
                 </h4><br><br>
 
                 <h3>Project Submission</h3>
