--- a/index.html
+++ b/index.html
@@ -184,20 +184,14 @@
               <h3 style="text-indent: 0px;">
                 <div>
                   <h3>
-                    BU Fall 2025
-                  </h3>
-                  <h3>
-                    Software Lab
+                    BU Fall 2025 | Software Lab
                   </h3>
                 </div>
               </h3>
               <h3 style="text-indent: 0px;">
                 <div>
                   <h3>
-                    CFA AR 535 Z
-                  </h3>
-                  <h3>
-                    Credits 2
+                    CFA AR 535 Z | Credits 2
                   </h3>
                 </div>
               </h3>
